--- a/OneLocker/page1.html
+++ b/OneLocker/page1.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<title>Page1 — OneLocker</title>
-		<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/favicon.ico" type="image/x-icon">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-		<link href="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/OneLocker.css" rel="stylesheet">
+		<link href="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/OneLocker.css" rel="stylesheet">
 	</head>
 	<body>
 		<header>
@@ -13,7 +13,7 @@
 					<tbody>
 						<tr>
 							<td>
-								<img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/logo.png" height="120" style="margin-top: 8px;">
+								<img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/logo.png" height="120" style="margin-top: 8px;">
 							</td>
 						</tr>
 						<tr>
@@ -40,7 +40,7 @@
 			</nav>
 		</footer>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/Dark%20Mode.js"></script>
+		<script src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/Dark%20Mode.js"></script>
 		<script>
 			if(localStorage.getItem("user") != "shwin17MAGD" && localStorage.getItem("user") != "demo" && localStorage.getItem("user") != "lmtsd"){
 				window.location.replace("/OneLocker/login");
@@ -62,26 +62,26 @@
 						<a href="https://news.google.com/foryou?hl=en-US&gl=US&ceid=US%3Aen" target="_blank" title="Google News"><img src="https://lh3.googleusercontent.com/J6_coFbogxhRI9iM864NL_liGXvsQp2AupsKei7z0cNNfDvGUmWUy20nuUhkREQyrpY4bEeIBuc=w300" width=100 height=100 alt="Google News"></a>\
 						<a href="https://www.cnet.com/" target="_blank" title="CNET"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Cnet-logo-red-2020.svg/250px-Cnet-logo-red-2020.svg.png" width=136.612021857 height=100 alt="CNET"></a>\
 						<a href="https://www.theverge.com/" target="_blank" title="The Verge"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@d6c8b79/verge.png" width=100 height=100 alt="The Verge"></a>\
-						<a href="https://www.nytimes.com/" target="_blank" title="The New York Times"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/NYTimes.png" width=100 height=100 alt="The New York Times"></a>\
+						<a href="https://www.nytimes.com/" target="_blank" title="The New York Times"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/NYTimes.png" width=100 height=100 alt="The New York Times"></a>\
 						<a href="https://www.washingtonpost.com/" target="_blank" title="The Washington Post"><img src="https://lh3.googleusercontent.com/JDrO88srYGmqrOeyqtT1al3JQD0IKRS-OO7PDMjETiPuDNgCC45wJF8LIBH-QOcTMTE=s180-rw" width=100 height=100 alt="The Washington Post"></a>\
 					</span>\
 				</div>\
-				<div style="width: 643px; margin: 0px 8px 8px 0px;">\
+				<div style="width: 443px; margin: 0px 8px 8px 0px;">\
 					<h2>Learning:</h2>\
 					<span>\
 						<a href="https://www.youtube.com/user/crashcourse" target="_blank" title="Crash Course"><img src="https://upload.wikimedia.org/wikipedia/en/e/e9/Crash_Course_logo.png" width=100 height=100 alt="Crash Course"></a>\
 						<a href="https://www.ted.com/" target="_blank" title="TED"><img src="https://lh3.googleusercontent.com/w_bxOqm2p2BntxtMt_MQqwxRJhI4MQR0cu-Gn_oKkd9UXGG3FH8S2xRTkx9vtArBcp8l=s180-rw" id="dTed" width=100 height=100 alt="TED"></a>\
-						<a href="https://www.wikipedia.org/" target="_blank" title="Wikipedia"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Wikipedia-logo-v2.svg/150px-Wikipedia-logo-v2.svg.png" width=100 height=100 alt="Wikipedia"></a>\
-						<a href="https://www.coursera.org/" target="_blank" title="Coursera"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/Coursera-Logo_600x600.svg/600px-Coursera-Logo_600x600.svg.png" width=100 height=100 alt="Coursera"></a>\
-						<a href="https://learn.mangolanguages.com" target="_blank" title="Mango Languages"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/Mango.png" id="dMan" width=93 height=100 alt="Mango Languages"></a>\
+						<a href="https://learn.mangolanguages.com" target="_blank" title="Mango Languages"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/Mango.png" id="dMan" width=93 height=100 alt="Mango Languages"></a>\
 					</span>\
 				</div>\
-				<div style="width: 450px; margin: 0px 8px 8px 0px;">\
+				<div style="width: 650px; margin: 0px 8px 8px 0px;">\
 					<h2>Design:</h2>\
 					<span>\
-						<a href="https://www.canva.com/" target="_blank" title="Canva"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/Canva.png" width=100 height=100 alt="Canva"></a>\
-						<a href="https://www.vectary.com/dashboard/?teamId=b7845d38-67a1-4439-a286-e9c66adccc22" target="_blank" title="Vectary"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/Vectary.png" id="dVec" width=100 height=100 alt="Vectary"></a>\
+						<a href="https://www.canva.com/" target="_blank" title="Canva"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/Canva.png" width=100 height=100 alt="Canva"></a>\
+						<a href="https://www.vectary.com/dashboard/?teamId=b7845d38-67a1-4439-a286-e9c66adccc22" target="_blank" title="Vectary"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/Vectary.png" id="dVec" width=100 height=100 alt="Vectary"></a>\
+						<a href="https://www.thingiverse.com/" target="_blank" title="Thingiverse"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Thingiverse_Logo_192x192.png" width=100 height=100 alt="Thingiverse"></a>\
 						<a href="https://polar3d.com/" target="_blank" title="Polar Cloud"><img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Polar_Cloud_Enabled_Logo.png" width=100 height=100 alt="Polar Cloud"></a>\
+						<a href="http://192.168.1.163:8080/?action=stream" target="_blank" title="Printer Cam"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@e2fa418/3DCam.png" width=100 height=100 alt="Printer Cam" id="dCam"></a>\
 					</span>\
 				</div>\
 				<div style="width: 550px; margin: 0px 8px 8px 0px;">\
@@ -93,28 +93,22 @@
 						<a href="https://www.khanacademy.org/" target="_blank" title="Khan Academy"><img src="https://avatars0.githubusercontent.com/u/15455?s=200&v=4" width=100 height=100 alt="Khan Academy"></a>\
 					</span>\
 				</div>\
-				<div style="width: 350px; margin: 0px 8px 8px 0px;">\
-					<h2>Money:</h2>\
+				<div style="width: 550px; margin: 0px 8px 8px 0px;">\
+					<h2>Money and Career:</h2>\
 					<span>\
 						<a href="https://drive.google.com/drive/u/0/folders/1D24zb9iSw7J8sRPz7pJ1Qy5noJjeoveW" target="_blank" title="Budget"><img src="https://cdn.brainpop.com/socialstudies/economics/budgets/icon_360x360.png" width=100 height=100 alt="Budget"></a>\
-						<a href="https://www.stockpile.com/dashboard" target="_blank" title="Stockpile"><img src="https://lh3.googleusercontent.com/JYEnm6vC_77tI2Y8Ve6OrxiLED92OKf4Pb8okW8OBAtpVMYMxKw8RyG7tjuKdq1VfExv=s180-rw" width=100 height=100 alt="Stockpile"></a>\
-					</span>\
-				</div>\
-				<div style="width: 450px; margin: 0px 8px 8px 0px;">\
-					<h2>Libraries:</h2>\
-					<span>\
-						<a href="http://hvlibrary.org/" target="_blank" title="Huntingdon Valley Library"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/hvLibrary.png" width=100 height=100 alt="Huntingdon Valley Library"></a>\
-						<a href="http://mclinc.polarislibrary.com/polaris/default.aspx" target="_blank" title="Library Catalog"><img src="https://media-exp1.licdn.com/dms/image/C560BAQH22RB56LFQ0Q/company-logo_200_200/0?e=2159024400&v=beta&t=MEc7C2RoVmMhyA7DSU-hkq1GVf3Y8uUfu5A_15q4nQ8" id="dMont" width=100 height=100 alt="Library Catalog"></a>\
-						<a href="https://sites.google.com/lmtsd.org/lmhs-library/home" target="_blank" title="LMHS Library"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/HSLibrary.gif" width=100 height=100 alt="LMHS Library"></a>\
+						<a href="https://www.stockpile.com/dashboard" target="_blank" title="Stockpile"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@e2fa418/stockpile.png" width=100 height=100 alt="Stockpile"></a>\
+						<a href="https://www.linkedin.com/in/ashwin-p-thomas/" target="_blank" title="LinkedIn"><img src="https://play-lh.googleusercontent.com/kMofEFLjobZy_bCuaiDogzBcUT-dz3BBbOrIEjJ-hqOabjK8ieuevGe6wlTD15QzOqw=s180-rw" width=100 height=100 alt="LinkedIn"></a>\
+						<a href="https://drive.google.com/drive/u/0/folders/1E0K--lCsma1vg-sis2rN8fTxmt0Yhycm" target="_blank" title="Employment"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@e2fa418/work.png" width=100 height=100 alt="Employment" id="dWork"></a>\
 					</span>\
 				</div>\
 				');
 				$("#siteNav").html('\
-				<a href="/OneLocker/page1" id="active"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/home.svg" id="dHome" width="24" height="24">Personal</a>\
-				<a href="/OneLocker/page2"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/school.svg" id="dSchoo" width="24" height="24">School</a>\
-				<a href="/OneLocker/page3"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/college.svg" id="dColl" width="24" height="24">College</a>\
-				<a href="/OneLocker/page4"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/agenda.svg" id="dAgen" width="24" height="24">Agenda</a>\
-				<a id="account"><span><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/account.svg" id="dAcc" width="24" height="24">Account</span><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/dropDown.svg" id="dDrop" height="18" style="display: inline-block; margin: 0px;"></a>\
+				<a href="/OneLocker/page1" id="active"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/home.svg" id="dHome" width="24" height="24">Personal</a>\
+				<a href="/OneLocker/page2"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/school.svg" id="dSchoo" width="24" height="24">School</a>\
+				<a href="/OneLocker/page3"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/college.svg" id="dColl" width="24" height="24">College</a>\
+				<a href="/OneLocker/page4"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/agenda.svg" id="dAgen" width="24" height="24">Agenda</a>\
+				<a id="account"><span><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/account.svg" id="dAcc" width="24" height="24">Account</span><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/dropDown.svg" id="dDrop" height="18" style="display: inline-block; margin: 0px;"></a>\
 					<nav id="accOpt">\
 						<p>Welcome to your Locker, Ashwin Thomas!</p>\
 						<a href="/OneLocker/login" style="border-top: 1px solid #5f6368" class="logout">Logout</a>\
@@ -169,14 +163,14 @@
 						<a href="https://www.youtube.com/user/crashcourse" target="_blank" title="Crash Course"><img src="https://upload.wikimedia.org/wikipedia/en/e/e9/Crash_Course_logo.png" width=100 height=100 alt="Crash Course"></a>\
 						<a href="https://quizlet.com/latest" target="_blank" title="Quizlet"><img src="https://quizlet.com/a/i/brandmark/1024.893fa7e00da6339.png" width=100 height=100 alt="Quizlet"></a>\
 						<a href="https://www.sparknotes.com/" target="_blank" title="SparkNotes"><img src="https://lh3.googleusercontent.com/tGMpDn7vYIDTGnqSCQIzdOpIXdft1hDj8OGBw65Oj8__2nTEUjfwQpROwK7harTCRbE4=s180-rw" width=100 height=100 alt="SparkNotes"></a>\
-						<a href="http://www.edumedia-sciences.com/en/" target="_blank" title="eduMedia"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/eduMedia.png" width=100 height=100 alt="eduMedia"></a>\
+						<a href="http://www.edumedia-sciences.com/en/" target="_blank" title="eduMedia"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/eduMedia.png" width=100 height=100 alt="eduMedia"></a>\
 					</span>\
 				</div>\
 				<div style="width: 350px; margin: 0px 8px 8px 0px;">\
 					<h2>Library:</h2>\
 					<span>\
-						<a href="https://sites.google.com/lmtsd.org/lmhs-library/home" target="_blank" title="LMHS Library"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/HSLibrary.gif" width=100 height=100 alt="LMHS Library"></a>\
-						<a href="https://docs.google.com/spreadsheets/d/1QQ0CI7502RT3EffllNL2N7gAnYp4ks4STnkDfAvgSf4/edit" target="_blank" title="Passwords"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/password.svg" id="dPass" width=100 height=100 alt="Passwords"></a>\
+						<a href="https://sites.google.com/lmtsd.org/lmhs-library/home" target="_blank" title="LMHS Library"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/HSLibrary.gif" width=100 height=100 alt="LMHS Library"></a>\
+						<a href="https://docs.google.com/spreadsheets/d/1QQ0CI7502RT3EffllNL2N7gAnYp4ks4STnkDfAvgSf4/edit" target="_blank" title="Passwords"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/password.svg" id="dPass" width=100 height=100 alt="Passwords"></a>\
 					</span>\
 				</div>\
 				<div style="width: 654.166666666px; margin: 0px 8px 8px 0px;">\
@@ -297,39 +291,5 @@
 			darkImg(isDark);
 			isDark.addListener(darkImg);
 		</script>
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
-
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-
-<!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
-<!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-database.js"></script>
-<script>
-    var firebaseConfig = {
-  	apiKey: "AIzaSyCJq6RpI3rdxW__WVALbw5c0nWGE-akdAE",
-  	authDomain: "onelocker-432f9.firebaseapp.com",
-  	databaseURL: "https://onelocker-432f9-default-rtdb.firebaseio.com",
-  	projectId: "onelocker-432f9",
- 	storageBucket: "onelocker-432f9.appspot.com",
- 	messagingSenderId: "1099368824930",
-	appId: "1:1099368824930:web:655128e95ad7f9504a513b"
-    };
-    var config = {
-   	apiKey: "AIzaSyCJq6RpI3rdxW__WVALbw5c0nWGE-akdAE",
-  	authDomain: "onelocker-432f9.firebaseapp.com",
-    	// For databases not in the us-central1 location, databaseURL will be of the
-   	// form https://[databaseName].[region].firebasedatabase.app.
-  	// For example, https://your-database-123.europe-west1.firebasedatabase.app
-  	databaseURL: "https://onelocker-432f9-default-rtdb.firebaseio.com",
-  	storageBucket: "onelocker-432f9.appspot.com"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    // Get a reference to the database service
-    var database = firebase.database();
-</script>
 	</body>
 </html>
