--- a/OneLocker/page4.html
+++ b/OneLocker/page4.html
@@ -2,9 +2,17 @@
 <html>
 	<head>
 		<title>Page4 — OneLocker</title>
-		<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/favicon.ico" type="image/x-icon">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-		<link href="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/OneLocker.css" rel="stylesheet">
+		<link href="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/OneLocker.css" rel="stylesheet">
+		<style>
+			#schedule{
+				text-decoration: none;
+			}
+			#schedule *:hover{
+				opacity: 0.5;
+			}
+		</style>
 	</head>
 	<body>
 		<header>
@@ -13,7 +21,7 @@
 					<tbody>
 						<tr>
 							<td>
-								<img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/logo.png" height="120" style="margin-top: 8px;">
+								<img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/logo.png" height="120" style="margin-top: 8px;">
 							</td>
 						</tr>
 						<tr>
@@ -40,7 +48,7 @@
 			</nav>
 		</footer>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/Dark%20Mode.js"></script>
+		<script src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/Dark%20Mode.js"></script>
 		<script>
 			if(localStorage.getItem("user") != "shwin17MAGD" && localStorage.getItem("user") != "demo" && localStorage.getItem("user") != "lmtsd"){
 				window.location.replace("/OneLocker/login");
@@ -58,21 +66,22 @@
 							<option value="3">College</option>\
 						</select>\
 						<input type="submit" value="Select"></input>\
+						<a id="schedule" href="https://docs.google.com/spreadsheets/d/1haW1Se2SzRORLNNaXNz2jejuwH49kbUDtDJyu7q0USg/edit#gid=1437214289" target="_blank" title="Class Schedule"><h2 style="margin-top: 16px;">Schedule &rarr;</h2></a>\
 					</form>\
 				</div>\
 				<div id="calCont" style="position: fixed; top: 100px; height: 460px; width: 90vw; left: 5vw; box-shadow: none; background-color: inherit;">\
-					<img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/close.svg" id="dClos" style="position: absolute; top: 0px; right: 0px; height: 18px;" alt="Close">\
+					<img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/close.svg" id="dClos" style="position: absolute; top: 0px; right: 0px; height: 18px;" alt="Close">\
 					<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23B39DDB&amp;ctz=America%2FNew_York&amp;src=dnFuOG44NHN0ZHVlNm9kZWJibmZmaDFncGtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=c2h3aW4zMjBAZ21haWwuY29t&amp;src=ZmFtaWx5MDI0NzIyNjUxNDc4MTI2MTc2NTBAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%237986CB&amp;color=%23F6BF26&amp;color=%230B8043&amp;showTitle=0&amp;showTz=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0" style="border:solid 1px #777; height: 100%; width: 100%; box-shadow: 0px 0px 5px #989595;" frameborder="0" scrolling="no" id="calP"></iframe>\
 					<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23039BE5&amp;ctz=America%2FNew_York&amp;src=YXRob21hczUxNDlAc3R1LmxtdHNkLm9yZw&amp;src=bG10c2Qub3JnX2pqdHY0YmVuczZva20xZ2l1ODgyYWxxaWZjQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&amp;src=ZXBybDVpMWk2a2UzdmhiM3RpajVjNzU0MzZpY2dsajBAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&amp;color=%23039BE5&amp;color=%23D81B60&amp;color=%23F6BF26&amp;showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0" style="border:solid 1px #777; height: 100%; width: 100%; box-shadow: 0px 0px 5px #989595;" frameborder="0" scrolling="no" id="calS"></iframe>\
 					<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23F09300&amp;ctz=America%2FNew_York&amp;src=YXNod2lucHRob21hczNAZ21haWwuY29t&amp;color=%23039BE5&amp;showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0" style="border:solid 1px #777; height: 100%; width: 100%; box-shadow: 0px 0px 5px #989595;" frameborder="0" scrolling="no" id="calC"></iframe>\
 				</div>\
 				');
 				$("#siteNav").html('\
-				<a href="/OneLocker/page1"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/home.svg" id="dHome" width="24" height="24">Personal</a>\
-				<a href="/OneLocker/page2"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/school.svg" id="dSchoo" width="24" height="24">School</a>\
-				<a href="/OneLocker/page3"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/college.svg" id="dColl" width="24" height="24">College</a>\
-				<a href="/OneLocker/page4" id="active"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/agenda.svg" id="dAgen" width="24" height="24">Agenda</a>\
-				<a id="account"><span><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/account.svg" id="dAcc" width="24" height="24">Account</span><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@9b8e12c/dropDown.svg" id="dDrop" height="18" style="display: inline-block; margin: 0px;"></a>\
+				<a href="/OneLocker/page1"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/home.svg" id="dHome" width="24" height="24">Personal</a>\
+				<a href="/OneLocker/page2"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/school.svg" id="dSchoo" width="24" height="24">School</a>\
+				<a href="/OneLocker/page3"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/college.svg" id="dColl" width="24" height="24">College</a>\
+				<a href="/OneLocker/page4" id="active"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/agenda.svg" id="dAgen" width="24" height="24">Agenda</a>\
+				<a id="account"><span><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/account.svg" id="dAcc" width="24" height="24">Account</span><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@4256448/dropDown.svg" id="dDrop" height="18" style="display: inline-block; margin: 0px;"></a>\
 					<nav id="accOpt">\
 						<p>Welcome to your Locker, Ashwin Thomas</p>\
 						<a href="/OneLocker/login" style="border-top: 1px solid #5f6368" class="logout">Logout</a>\
@@ -189,39 +198,5 @@
 			darkImg(isDark);
 			isDark.addListener(darkImg);
 		</script>
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
-
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-
-<!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
-<!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-database.js"></script>
-<script>
-    var firebaseConfig = {
-  	apiKey: "AIzaSyCJq6RpI3rdxW__WVALbw5c0nWGE-akdAE",
-  	authDomain: "onelocker-432f9.firebaseapp.com",
-  	databaseURL: "https://onelocker-432f9-default-rtdb.firebaseio.com",
-  	projectId: "onelocker-432f9",
- 	storageBucket: "onelocker-432f9.appspot.com",
- 	messagingSenderId: "1099368824930",
-	appId: "1:1099368824930:web:655128e95ad7f9504a513b"
-    };
-    var config = {
-   	apiKey: "AIzaSyCJq6RpI3rdxW__WVALbw5c0nWGE-akdAE",
-  	authDomain: "onelocker-432f9.firebaseapp.com",
-    	// For databases not in the us-central1 location, databaseURL will be of the
-   	// form https://[databaseName].[region].firebasedatabase.app.
-  	// For example, https://your-database-123.europe-west1.firebasedatabase.app
-  	databaseURL: "https://onelocker-432f9-default-rtdb.firebaseio.com",
-  	storageBucket: "onelocker-432f9.appspot.com"
-    };
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    // Get a reference to the database service
-    var database = firebase.database();
-</script>
 	</body>
 </html>
