--- a/OneLocker/page2.html
+++ b/OneLocker/page2.html
@@ -48,10 +48,17 @@
 				$("title").html("School — OneLocker");
 				$("#content").html('\
 				<h1>School</h1>\
+				<div style="width: 465.78px; margin: 0px 8px 8px 0px;">\
+					<h2>Classroom:</h2>\
+					<span>\
+						<a href="https://lmtsd.instructure.com/login/saml" target="_blank" title="Canvas"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@8cefb9f/canvas.png" width=100 height=100 alt="Canvas"></a>\
+						<a href="https://classroom.google.com/?authuser=athomas5149@stu.lmtsd.org" target="_blank" title="Google Classroom"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/Google_Classroom_icon.svg/220px-Google_Classroom_icon.svg.png" width=115.78 height=100 alt="Google Classroom"></a>\
+						<a href="https://myap.collegeboard.org/" target="_blank" title="AP Classroom"><img src="http://cdn.jsdelivr.net/gh/shwin320/OneLocker@8916b75/AP.png" width=100 height=100 alt="AP Classroom"></a>\
+					</span>\
+				</div>\
 				<div style="width: 610.22px; margin: 0px 8px 8px 0px;">\
 					<h2>G Suite:</h2>\
 					<span>\
-						<a href="https://classroom.google.com/?authuser=athomas5149@stu.lmtsd.org" target="_blank" title="Google Classroom"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/Google_Classroom_icon.svg/220px-Google_Classroom_icon.svg.png" width=115.78 height=100 alt="Google Classroom"></a>\
 						<a href="https://drive.google.com/drive/?authuser=athomas5149@stu.lmtsd.org" target="_blank" title="Google Drive"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Google_Drive_icon_%282020%29.svg/100px-Google_Drive_icon_%282020%29.svg.png" width=111.11 height=100 alt="Google Drive"></a>\
 						<a href="https://mail.google.com/mail/u/?authuser=athomas5149@stu.lmtsd.org" target="_blank" title="Gmail"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/100px-Gmail_icon_%282020%29.svg.png" width=133.33 height=100 alt="Gmail"></a>\
 						<a href="https://calendar.google.com/calendar/?authuser=athomas5149@stu.lmtsd.org" target="_blank" title="Google Calendar"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Google_Calendar_icon_%282020%29.svg/100px-Google_Calendar_icon_%282020%29.svg.png" width=100 height=100 alt="Google Calander"></a>\
@@ -60,9 +67,10 @@
 				<div style="width: 450px; margin: 0px 8px 8px 0px;">\
 					<h2>Textbooks:</h2>\
 					<span>\
+						<a href="https://accounts.google.com/o/saml2/initsso?idpid=C01p8vbki&spid=1073399322464&forceauthn=false" target="_blank" title="McGraw Hill"><img src="https://my.mheducation.com/secure/assets/images/Mhelogo.png" width=100 height=100 alt="McGraw Hill"></a>\
+						<a href="https://sso.rumba.pk12ls.com/sso/login?service=https://cat.easybridge.pk12ls.com/ca/dashboard.htm&idpmetadata=https://www.lmtsd.org" target="_blank" title="Savvas Realize"><img src="https://media-exp1.licdn.com/dms/image/C4D0BAQEMR68Z6LCPEg/company-logo_200_200/0?e=2159024400&v=beta&t=EHibD-PK0HAuw6UHfFgUBhgFxwDkUZ7jh9a-GuxSN0k" width=100 height=100 alt="Savvas Realize"></a>\
 						<a href="https://portal.mypearson.com/portal" target="_blank" title="MyLab Math"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@f9a14c5/pearson.png" width=100 height=100 alt="MyLab Math"></a>\
 						<a href="https://google.discoveryeducation.com/" target="_blank" title="Discovery Education"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@220ee6e/discovery.png" width=100 height=100 alt="Discovery Education" id="dDisc"></a>\
-						<a href="https://sso.rumba.pk12ls.com/sso/login?service=https://cat.easybridge.pk12ls.com/ca/dashboard.htm&idpmetadata=https://www.lmtsd.org" target="_blank" title="Savvas Realize"><img src="https://media-exp1.licdn.com/dms/image/C4D0BAQEMR68Z6LCPEg/company-logo_200_200/0?e=2159024400&v=beta&t=EHibD-PK0HAuw6UHfFgUBhgFxwDkUZ7jh9a-GuxSN0k" width=100 height=100 alt="Savvas Realize"></a>\
 					</span>\
 				</div>\
 				<div style="width: 550px; margin: 0px 8px 8px 0px;">\
