--- a/OneLocker/page2.html
+++ b/OneLocker/page2.html
@@ -56,7 +56,7 @@
 						<a href="https://myap.collegeboard.org/" target="_blank" title="AP Classroom"><img src="http://cdn.jsdelivr.net/gh/shwin320/OneLocker@8916b75/AP.png" width=100 height=100 alt="AP Classroom"></a>\
 					</span>\
 				</div>\
-				<div style="width: 610.22px; margin: 0px 8px 8px 0px;">\
+				<div style="width: 494.44px; margin: 0px 8px 8px 0px;">\
 					<h2>G Suite:</h2>\
 					<span>\
 						<a href="https://drive.google.com/drive/?authuser=athomas5149@stu.lmtsd.org" target="_blank" title="Google Drive"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Google_Drive_icon_%282020%29.svg/100px-Google_Drive_icon_%282020%29.svg.png" width=111.11 height=100 alt="Google Drive"></a>\
@@ -73,12 +73,13 @@
 						<a href="https://google.discoveryeducation.com/" target="_blank" title="Discovery Education"><img src="https://cdn.jsdelivr.net/gh/shwin320/OneLocker@220ee6e/discovery.png" width=100 height=100 alt="Discovery Education" id="dDisc"></a>\
 					</span>\
 				</div>\
-				<div style="width: 550px; margin: 0px 8px 8px 0px;">\
+				<div style="width: 650px; margin: 0px 8px 8px 0px;">\
 					<h2>Study Tools:</h2>\
 					<span>\
 						<a href="https://www.khanacademy.org/" target="_blank" title="Khan Academy"><img src="https://avatars0.githubusercontent.com/u/15455?s=200&v=4" width=100 height=100 alt="Khan Academy"></a>\
 						<a href="https://www.youtube.com/user/crashcourse" target="_blank" title="Crash Course"><img src="https://upload.wikimedia.org/wikipedia/en/e/e9/Crash_Course_logo.png" width=100 height=100 alt="Crash Course"></a>\
 						<a href="https://quizlet.com/latest" target="_blank" title="Quizlet"><img src="https://quizlet.com/a/i/brandmark/1024.893fa7e00da6339.png" width=100 height=100 alt="Quizlet"></a>\
+						<a href="https://codehs.com/student/2845133/section/248351" target="_blank" title="CodeHS"><img src="https://static.codehs.com/img/logo.png" width=100 height=100 alt="CodeHS"></a>\
 						<a href="https://www.sparknotes.com/" target="_blank" title="SparkNotes"><img src="https://lh3.googleusercontent.com/tGMpDn7vYIDTGnqSCQIzdOpIXdft1hDj8OGBw65Oj8__2nTEUjfwQpROwK7harTCRbE4=s180-rw" width=100 height=100 alt="SparkNotes"></a>\
 					</span>\
 				</div>\
