--- a/EasyTools/reading_mode.html
+++ b/EasyTools/reading_mode.html
@@ -11,8 +11,8 @@
   			gtag('config', 'UA-66265239-4');
 		</script>
 		<title>Convert to Reader Mode</title>
-		<link rel="icon" href="https://cdn.jsdelivr.net/gh/shwin320/reading-mode@93e299f/logo.ico">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/shwin320/reading-mode@93e299f/reading-mode.css">
+		<link rel="icon" href="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@791a7a0/Reading%20Mode/logo.ico">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@791a7a0/Reading%20Mode/reading_mode.css">
 	</head>
 	<body>
 		<h1>Convert to Reader Mode</h1>
