--- a/EasyTools/reading-mode.html
+++ b/EasyTools/reading-mode.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@791a7a0/Reading%20Mode/reading_mode.css">
 	</head>
 	<body>
-		<h1>Convert to Reader Mode</h1>
+		<h1>Convert to Reading Mode</h1>
 		<h2>Force Reader Mode on any Website in Microsoft Edge</h2>
 		<br><br>
 		<form id="convert">
