--- a/EasyTools/reading-mode.html
+++ b/EasyTools/reading-mode.html
@@ -10,13 +10,13 @@
 
   			gtag('config', 'UA-66265239-4');
 		</script>
-		<title>Convert to Reader Mode</title>
+		<title>Convert to Reading Mode</title>
 		<link rel="icon" href="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@791a7a0/Reading%20Mode/logo.ico">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@791a7a0/Reading%20Mode/reading_mode.css">
 	</head>
 	<body>
 		<h1>Convert to Reading Mode</h1>
-		<h2>Force Reader Mode on any Website in Microsoft Edge</h2>
+		<h2>Force Reading Mode on any Website in Microsoft Edge</h2>
 		<br><br>
 		<form id="convert">
 			<input type="text" placeholder='Enter original URL (in full, including "https://")' id="url">
