--- a/EasyTools/straight-from-the-src.html
+++ b/EasyTools/straight-from-the-src.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width">
-		<link data-react-helmet="true" rel="icon" href="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@13e954a/SRC.ico">
+		<link data-react-helmet="true" rel="icon" href="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@13e954a/straight-from-the-src/SRC.ico">
 		<link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet">
-		<link href="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@13e954a/style.css" rel="stylesheet">
+		<link href="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@13e954a/straight-from-the-src/style.css" rel="stylesheet">
 		<title>straight from the src</title>
 	</head>
 	<body data-gr-c-s-loaded="true" onload="startup()">
-		<img src="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@13e954a/logo.png" style="width: 65vw;" alt="straight from the src">
+		<img src="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@13e954a/straight-from-the-src/logo.png" style="width: 65vw;" alt="straight from the src">
 		<br><br>
 		<div id="inter">
 			<span id="contain"><video id="media"></video></span><br>
@@ -17,13 +17,13 @@
 				<div id="prog"></div>
 				<span id="buttons">
 					<span>
-						<button id="back"><img src="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@13e954a/replay.svg" alt="Replay 10s" title="Replay" width="35"></button>
-						<button id="play"><img src="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@13e954a/play.svg" alt="Play" title="Play" width="35"></button>
-						<button id="skip"><img src="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@13e954a/skip.svg" alt="Skip 10s" title="Skip" width="35"></button>
+						<button id="back"><img src="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@13e954a/straight-from-the-src/replay.svg" alt="Replay 10s" title="Replay" width="35"></button>
+						<button id="play"><img src="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@13e954a/straight-from-the-src/play.svg" alt="Play" title="Play" width="35"></button>
+						<button id="skip"><img src="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@13e954a/straight-from-the-src/skip.svg" alt="Skip 10s" title="Skip" width="35"></button>
 					</span>
 					<span>
-						<button id="reap"><img src="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@13e954a/repeat-no.svg" alt="Don't Repeat" title="Don't Repeat" width="35"></button>
-						<button id="full"><img src="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@13e954a/full.svg" alt="Fullscreen" title="Fullscreen" width=35></button>
+						<button id="reap"><img src="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@13e954a/straight-from-the-src/repeat-no.svg" alt="Don't Repeat" title="Don't Repeat" width="35"></button>
+						<button id="full"><img src="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@13e954a/straight-from-the-src/full.svg" alt="Fullscreen" title="Fullscreen" width=35></button>
 					</span>
 				</span>
 			</span>
@@ -70,6 +70,6 @@
 			</div>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@13e954a/SRC.js"></script>
+		<script src="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@13e954a/straight-from-the-src/SRC.js"></script>
 	</body>
 </html>
