--- a/EasyTools/Notepad.html
+++ b/EasyTools/Notepad.html
@@ -1,10 +1,10 @@
 <html>
 	<head>
 		<link href="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@33d561b/Notepad/logo.png" rel="shortcut icon" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@33d561b/Notepad/style.css" rel="stylesheet">
+    		<link href="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@eb94d2e/Notepad/style.css" rel="stylesheet">
 	</head>
 	<body id="pad" contenteditable>
-		<p>Notepad - Write stuff down here:</p>
+		Notepad - Write stuff down here:
 	</body>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@33d561b/Notepad/script.js"></script>
