--- a/EasyTools/Notepad.html
+++ b/EasyTools/Notepad.html
@@ -2,9 +2,10 @@
 	<head>
 		<link href="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@33d561b/Notepad/logo.png" rel="shortcut icon" type="image/x-icon">
     		<link href="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@eb94d2e/Notepad/style.css" rel="stylesheet">
+		<title>Notepad</title>
 	</head>
 	<body id="pad" contenteditable>
-		Notepad - Write stuff down here:
+		<p>Notepad - Write stuff down here:</p>
 	</body>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/shwin320/EasyTools@33d561b/Notepad/script.js"></script>
