--- a/YUM Cafe/index.html
+++ b/YUM Cafe/index.html
@@ -4,15 +4,15 @@
 	<head>
 		<title>YUM Cafe</title>
 		<link href="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@2e7b544/Assets/icon.ico" rel="shortcut icon">
-		<link href="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@8ed1f83/Resources/style.css" rel="stylesheet"></link>
+		<link href="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@975b28a/Resources/style.css" rel="stylesheet"></link>
 	</head>
 	<body onscroll="scrollChange()">
 		<header>
 			<nav>
-				<a href="/home" id="active">HOME</a>
-				<a href="/story">OUR STORY</a>
-				<a href="/menu">MENU</a>
-				<a href="/connect">CONNECT WITH US</a>
+				<a href="/YUM Cafe/" id="active">HOME</a>
+				<a href="/YUM Cafe/story">OUR STORY</a>
+				<a href="/YUM Cafe/menu">MENU</a>
+				<a href="/YUM Cafe/connect">CONNECT WITH US</a>
 			</nav>
 		</header>
 		<div id="homeTop">
