--- a/YUM Cafe/connect.html
+++ b/YUM Cafe/connect.html
@@ -9,10 +9,10 @@
 	<body>
 		<header>
 			<nav>
-				<a href="/home">HOME</a>
-				<a href="/story">OUR STORY</a>
-				<a href="/menu">MENU</a>
-				<a href="/connect" id="active">CONNECT WITH US</a>
+				<a href="/YUM Cafe/home">HOME</a>
+				<a href="/YUM Cafe/story">OUR STORY</a>
+				<a href="/YUM Cafe/menu">MENU</a>
+				<a href="/YUM Cafe/connect" id="active">CONNECT WITH US</a>
 			</nav>
 		</header>
 		<div id="top">
