--- a/YUM Cafe/index.html
+++ b/YUM Cafe/index.html
@@ -24,7 +24,7 @@
 	    <div class="buffer"></div>
         <div id="menu">
            <span>
-             <h1>Our Specials<a href="/menu">→</a></h1>
+             <h1>Our Specials<a href="/YUM Cafe/menu">→</a></h1>
            </span>
            <table>
                <tr>
@@ -50,7 +50,7 @@
              <a href="https://www.instagram.com/"><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@2397a2b/Assets/Instagram.png" width="20" style="margin-right: 8px;"></a>
              <a href="https://www.twitter.com/"><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@2397a2b/Assets/Twitter.svg" width="20" style="margin-right: 8px;"></a>
           </span>
-          <a href="/notice"><h2>Notice</h2></a>
+          <a href="/YUM Cafe/notice"><h2>Notice</h2></a>
         </footer>
     </body>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
