--- a/YUM Cafe/connect.html
+++ b/YUM Cafe/connect.html
@@ -53,7 +53,7 @@
           <a href="https://www.instagram.com/"><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@2397a2b/Assets/Instagram.png" width="20" style="margin-right: 8px;"></a>
           <a href="https://www.twitter.com/"><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@2397a2b/Assets/Twitter.svg" width="20" style="margin-right: 8px;"></a>
         </span>
-        <a href="/notice"><h2>Notice</h2></a>
+        <a href="/YUM Cafe/notice"><h2>Notice</h2></a>
       </footer>
     </body>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
