--- a/YUM Cafe/index.html
+++ b/YUM Cafe/index.html
@@ -22,7 +22,7 @@
         <h1 style="color: white;">Let's be friends!</h1>
         <h2>Located in the heart of Lower Moreland, YUM Cafe is built on one idea alone: giving our patrons great food with great service. We offer a a full menu of delectable options. We stay true to our Indian origins while offering selection of classic American cuisine. When you eat with us, you come in as strangers, but leave as friends.</h2>
 	    <div class="buffer"></div>
-        <div id="menu">
+        <div class="menu">
            <span>
              <h1>Our Specials<a href="/YUM Cafe/menu">→</a></h1>
            </span>
