--- a/YUM Cafe/connect.html
+++ b/YUM Cafe/connect.html
@@ -9,7 +9,7 @@
 	<body>
 		<header>
 			<nav>
-				<a href="/YUM Cafe/home">HOME</a>
+				<a href="/YUM Cafe/">HOME</a>
 				<a href="/YUM Cafe/story">OUR STORY</a>
 				<a href="/YUM Cafe/menu">MENU</a>
 				<a href="/YUM Cafe/connect" id="active">CONNECT WITH US</a>
