--- a/YUM Cafe/index.html
+++ b/YUM Cafe/index.html
@@ -16,7 +16,7 @@
 			</nav>
 		</header>
 		<div id="homeTop">
-			<img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@a2dbdfc/Assets/YUM Cafe Logo (White).png" style="display: block; margin-left: auto; margin-right: auto; position: relative; top: 12.5vh; height: 75vh;">
+			<img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@a2dbdfc/Assets/YUM Cafe Logo (Color).png" style="display: block; margin-left: auto; margin-right: auto; position: relative; top: 12.5vh; height: 75vh;">
     </div>
         <br>
         <h1 style="color: white;">Let's be friends!</h1>
