--- a/YUM Cafe/story.html
+++ b/YUM Cafe/story.html
@@ -25,12 +25,12 @@
       <p>In 2012, seeing how much his family enjoyed his food, he decided to make his age-old dream a reality. In October of 2012, YUM Cafe opened its doors. From the very beginning, YUM Cafe has made it its mission to follow Ajay’s dream of serving delicious food that makes others happy. We also continue serving the best of Ajay’s two worlds: delicious American food and delicious Indian food. Ajay, Anjali, and Aaron continue to run YUM Cafe, making sure that our mission continues.</p>
       <table>
         <tr>
-          <td><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@265c088/Assets/Aaron.jpg" style="margin-right: 8px; height: 35vh;"></td>
-          <td><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@265c088/Assets/Ajay and Anjali.jpg" style="margin-left: 8px; height: 35vh;"></td>
+          <td><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@265c088/Assets/Ajay and Anjali.jpg" style="margin-right: 8px; height: 35vh;"></td>
+          <td><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@265c088/Assets/Aaron.jpg" style="margin-left: 8px; height: 35vh;"></td>
         </tr>
         <tr>
+	  <td><p>Ajay and Anjali</p></td>
           <td><p>Aaron</p></td>
-          <td><p>Ajay and Anjali</p></td>
         </tr>
       </table>
     </div>
