--- a/YUM Cafe/index.html
+++ b/YUM Cafe/index.html
@@ -16,7 +16,7 @@
 			</nav>
 		</header>
 		<div id="homeTop">
-			<img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@a2dbdfc/Assets/YUM Cafe Logo (Color).png" style="display: block; margin-left: auto; margin-right: auto; position: relative; top: 12.5vh; height: 75vh;">
+			<img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@a2dbdfc/Assets/YUM Cafe Logo (Color).png" style="display: block; margin-left: auto; margin-right: auto; position: relative; top: 12.5vh; height: 75vh;" alt="Logo">
     </div>
         <br>
         <h1 style="color: white;">Let's be friends!</h1>
@@ -28,10 +28,10 @@
            </span>
            <table>
                <tr>
-                   <td><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@5f0072a/Assets/Pizza.jpg" style="height: 15vh;"></td>
-                   <td><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@5f0072a/Assets/Chicken and Fries.jpg" style="height: 15vh;"></td>
-                   <td><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@5f0072a/Assets/Hamburger.jpg" style="height: 15vh;"></td>
-                   <td><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@5f0072a/Assets/Naan with Paneer.jpg" style="height: 15vh;"></td>
+                   <td><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@5f0072a/Assets/Pizza.jpg" style="height: 15vh;" alt="Pizza"></td>
+                   <td><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@5f0072a/Assets/Chicken and Fries.jpg" style="height: 15vh;" alt="Chicken and Fries"></td>
+                   <td><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@5f0072a/Assets/Hamburger.jpg" style="height: 15vh;" alt="Hamburger"></td>
+                   <td><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@5f0072a/Assets/Naan with Paneer.jpg" style="height: 15vh;" alt="Naan with Paneer"></td>
                </tr>
                <tr>
                    <td><h2 style="color: black;">Pizza</h2></td>
