--- a/YUM Cafe/connect.html
+++ b/YUM Cafe/connect.html
@@ -33,14 +33,14 @@
           <td>
             <h1>Follow Us</h1>
             <span id="SMlinks">
-              <a href="https://www.facebook.com/"><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@2397a2b/Assets/Facebook.png" style="margin-right: 24px; height: 10vh;"></a>
-              <a href="https://www.instagram.com/"><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@2397a2b/Assets/Instagram.png" style="margin-right: 24px; height: 10vh;"></a>
-              <a href="https://www.twitter.com/"><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@2397a2b/Assets/Twitter.svg" style="height: 10vh;"></a>
+              <a href="https://www.facebook.com/" title="Facebook"><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@2397a2b/Assets/Facebook.png" style="margin-right: 24px; height: 10vh;"></a>
+              <a href="https://www.instagram.com/" title="Instagram"><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@2397a2b/Assets/Instagram.png" style="margin-right: 24px; height: 10vh;"></a>
+              <a href="https://www.twitter.com/" title="Twitter"><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@2397a2b/Assets/Twitter.svg" style="height: 10vh;"></a>
             </span>
           </td>
           <td>
             <p>Recent Post:</p>
-            <a href="https://www.facebook.com/"><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@e41cd05/Assets/Facebook Ad.png" style="height: 35vh;"></a>
+            <a href="https://www.facebook.com/" title="Go to post"><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@e41cd05/Assets/Facebook Ad.png" style="height: 35vh;"></a>
           </td>
       </table>
     </div>
