--- a/YUM Cafe/index.html
+++ b/YUM Cafe/index.html
@@ -28,10 +28,10 @@
            </span>
            <table>
                <tr>
-                   <td><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@5f0072a/Assets/Pizza.jpg" style="height: 15vh;" alt="Pizza"></td>
-                   <td><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@5f0072a/Assets/Chicken and Fries.jpg" style="height: 15vh;" alt="Chicken and Fries"></td>
-                   <td><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@5f0072a/Assets/Hamburger.jpg" style="height: 15vh;" alt="Hamburger"></td>
-                   <td><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@5f0072a/Assets/Naan with Paneer.jpg" style="height: 15vh;" alt="Naan with Paneer"></td>
+                   <td><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@5f0072a/Assets/Pizza.jpg" style="height: 15vh;"></td>
+                   <td><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@5f0072a/Assets/Chicken and Fries.jpg" style="height: 15vh;"></td>
+                   <td><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@5f0072a/Assets/Hamburger.jpg" style="height: 15vh;"></td>
+                   <td><img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@5f0072a/Assets/Naan with Paneer.jpg" style="height: 15vh;"></td>
                </tr>
                <tr>
                    <td><h2 style="color: black;">Pizza</h2></td>
