--- a/YUM Cafe/connect.html
+++ b/YUM Cafe/connect.html
@@ -16,7 +16,7 @@
 			</nav>
 		</header>
 		<div id="top">
-          <img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@a2dbdfc/Assets/YUM Cafe Logo (White).png" style="display: block; margin-left: auto; margin-right: auto; height: 40vh;">
+          <img src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@a2dbdfc/Assets/YUM Cafe Logo (White).png" style="display: block; margin-left: auto; margin-right: auto; height: 40vh;" alt="Logo">
 		</div>
     <div>
       <table>
