--- a/YUM Cafe/index.html
+++ b/YUM Cafe/index.html
@@ -6,7 +6,7 @@
 		<link href="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@2e7b544/Assets/icon.ico" rel="shortcut icon">
 		<link href="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@975b28a/Resources/style.css" rel="stylesheet"></link>
 	</head>
-	<body onscroll="scrollChange()">
+	<body>
 		<header>
 			<nav>
 				<a href="/YUM Cafe/" id="active">HOME</a>
@@ -54,5 +54,5 @@
         </footer>
     </body>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@10bfca3/Resources/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/shwin320/YUM-Cafe@c75cc54/Resources/script.js"></script>
 </html>
